--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,7 +19,7 @@ security.basic.enabled=false
 
 spring.thymeleaf.cache=false
 
-flyway.locations=classpath:com.ihz.migration
+flyway.locations=classpath:com.ihz.migration.mysql
 
 server.port = 8090
 
