--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,7 +20,7 @@ security.basic.enabled=false
 
 spring.thymeleaf.cache=false
 
-flyway.locations=classpath:com.urbupdate.postgresqlmigration
+flyway.locations=classpath:com.urbupdate.migration.postgresql
 
 
 spring.http.multipart.max-file-size=10Mb
