--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -6,6 +6,7 @@
   "/src/main/resources/static/js/storePost.js": "/src/main/resources/static/js/storePost.js",
   "/src/main/resources/static/js/statisticsdb.js": "/src/main/resources/static/js/statisticsdb.js",
   "/src/main/resources/static/js/statistics.js": "/src/main/resources/static/js/statistics.js",
+  "/src/main/resources/static/js/sidebar.js": "/src/main/resources/static/js/sidebar.js",
   "/src/main/resources/static/js/showPost.js": "/src/main/resources/static/js/showPost.js",
   "/src/main/resources/static/js/posts.js": "/src/main/resources/static/js/posts.js",
   "src/main/resources/static/css/all.css": "src/main/resources/static/css/all.css"
