--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -9,5 +9,6 @@
   "/src/main/resources/static/js/sidebar.js": "/src/main/resources/static/js/sidebar.js",
   "/src/main/resources/static/js/showPost.js": "/src/main/resources/static/js/showPost.js",
   "/src/main/resources/static/js/posts.js": "/src/main/resources/static/js/posts.js",
+  "/src/main/resources/static/js/editPost.js": "/src/main/resources/static/js/editPost.js",
   "src/main/resources/static/css/all.css": "src/main/resources/static/css/all.css"
 }
