--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dropzone": "^4.3.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "select2": "^4.0.3"
+    "select2": "^4.0.3",
+    "spectrum-colorpicker": "^1.8.0"
   }
 }
