--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
             <artifactId>geoserver-manager</artifactId>
             <version>1.7.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <scope>runtime</scope>
+            <version>10.13.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
